services/Nextcloud/70-backup.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: backup-mariadb
  labels:
    app: backup-mariadb
spec:
  selector:
    matchLabels:
      app: backup-mariadb
  template:
    metadata:
      labels:
        app: backup-mariadb
    spec:
      containers:
        - name: mysqldump
          image: schnitzler/mysqldump
          args: ["-l", "8", "-d", "8"]
          volumeMounts:
            - name: backup-mariadb
              mountPath: /backup
            - name: crontab
              mountPath: /var/spool/cron/crontabs
            - name: script
              mountPath: /script

      volumes:
        - name: backup-mariadb
          hostPath:
            path: /media/nextcloud/backup/mariadb
            type: DirectoryOrCreate
        - name: crontab
          configMap:
            name: backup-mariadb-config
            items:
              - key: crontab
                path: root
        - name: script
          configMap:
            name: backup-mariadb-config
            items:
              - key: script
                path: backup.sh
