services/Nextcloud/80-borgmatic.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: borgmatic
  labels:
    app: borgmatic
spec:
  selector:
    matchLabels:
      app: borgmatic
  template:
    metadata:
      labels:
        app: borgmatic
    spec:
      nodeSelector:
        mount.media.nextcloud: "true"

      containers:
        - name: borgmatic
          image: b3vis/borgmatic
          volumeMounts:
            - name: nextcloud
              mountPath: /mnt/source/nextcloud
              readOnly: true
            - name: conf
              mountPath: /etc/borgmatic.d
            - name: ssh
              mountPath: /root/.ssh

      volumes:
        - name: nextcloud
          hostPath:
            path: /media/nextcloud
            type: DirectoryOrCreate
        - name: conf
          configMap:
            name: borgmatic-config
        - name: ssh
          projected:
            sources:
            - secret:
                name: borgmatic-ssh-key
            - configMap:
                name: borgmatic-known-hosts
