services/Nextcloud/40-mariadb.kae.yml
kind: Service
apiVersion: v1
metadata:
  namespace: nextcloud
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: filter-ingress-on-mariadb
spec:
  podSelector:
    matchLabels:
      app: mariadb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nextcloud
    - podSelector:
        matchLabels:
          app: backup-mariadb
    ports:
    - protocol: TCP
      port: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
              subPath: data
          ports:
            - name: db
              containerPort: 3306
          livenessProbe:
            exec:
              command:
                - "/bin/bash"
                - "-c"
                - "mysqladmin -u ${DOLLAR}MYSQL_USER --password=${DOLLAR}MYSQL_PASSWORD ping || exit 1"
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mariadb-data
