services/Nextcloud/50-nextcloud.yml
kind: Service
apiVersion: v1
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: nextcloud
  name: filter-ingress-on-nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: traefik
      podSelector:
        matchLabels:
          app: traefik

    ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:18
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /var/www/html
            - name: data
              mountPath: /var/www/html/data
          ports:
            - name: http
              containerPort: 80

        - name: cron
          image: nextcloud:18
          imagePullPolicy: Always
          command: ['/cron.sh']
          volumeMounts:
            - name: config
              mountPath: /var/www/html
            - name: data
              mountPath: /var/www/html/data
            - name: crontab
              mountPath: /var/spool/cron/crontabs

        - name: backup-calcard
          image: waja/calcardbackup
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /nextcloud
              readOnly: true
            - name: backup-calcard
              mountPath: /backup

      nodeSelector:
        mount.media.nextcloud: "true"

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: data
          hostPath:
            path: /media/nextcloud/data
            type: DirectoryOrCreate
        - name: backup-calcard
          hostPath:
            path: /media/nextcloud/backup/calcard
            type: DirectoryOrCreate
        - name: crontab
          configMap:
            name: nextcloud-crontab
            items:
              - key: crontab
                path: www-data
